--- a/view/field/index.css
+++ b/view/field/index.css
@@ -35,10 +35,10 @@
   font-size: 10px;
   font-weight: bold;
   line-height: 16px;
-  color: var(--surface-ui-regular);
+  color: var(--text-note);
   text-align: center;
   text-transform: uppercase;
-  border: 1px solid var(--surface-ui-regular);
+  border: 1px solid var(--text-note);
   border-bottom-width: 2px;
   border-radius: 2px;
 
